--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,24 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+  "compilerOptions": {
+    "outDir": "dist",
+    "lib": ["dom", "esnext"],
+    "jsx": "react-jsx",
+    "incremental": true,
+    "tsBuildInfoFile": "./tsconfig.tsbuildinfo",
+    "sourceMap": true,
+    "types": [],
+    "declaration": true,
+    "strict": true,
+    "esModuleInterop": true,
+    "baseUrl": "src",
+    "module": "es6",
+    "target": "es5",
+    "skipLibCheck": true,
+    "moduleResolution": "Node",
+    "paths": {
+      "@/*": ["*"]
+    }
+  },
+  "include": ["./src"],
+  "exclude": ["node_modules", "dist"]
 }
