--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "mantine-form-builder",
-  "version": "0.1.18",
+  "version": "0.1.23",
+  "homepage": "https://pradip-v2.github.io/mantine-form-builder/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pradip-v2/mantine-form-builder"
+  },
   "author": {
     "name": "Pradip Bankar",
     "email": "pradipbankar0097@gmail.com",
@@ -25,6 +30,7 @@
     "@mantine/notifications": "^8",
     "@phosphor-icons/react": "^2.1.10",
     "axios": "^1.10.0",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
